agent list spacing fix

--- a/src/css/popups.css
+++ b/src/css/popups.css
@@ -217,8 +217,8 @@ input[type="radio"].settings-radio:checked + label {
     border-radius: 10px;
     background:    var(--bg-3);
 }
-#agent-list > div:not(:nth-child(1)) {
-    margin: 10px 0;
+#agent-list > div:not(:nth-last-child(1)) {
+    margin: 0 0 10px 0;
 }
 #agent-list > div > span ~ img {
     margin-left: 8px;
